[tool.poetry]
name = "Active Learning Sandbox"
version = "0.1.0"
description = ""
authors = ["Antaraxia <antaraxia.kk@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
modAL = "^0.4.1"
matplotlib = "^3.5.2"
uvicorn = "^0.17.6"
fastapi = "^0.77.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"